# stonefold

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
bench_results/: README.md  make_graph.py
demo/: .env.example  Makefile  README.md  docker-compose.yml
docs/: 00-RFC-sif-intent-format.md  01-RFC-agent-control-policy.md  02-implementation-design.md  03-architecture-decisions.md  04-domains-and-use-cases.md  05-demo-spec.md  06-registry-domain-model.md  07-artifacts-and-schemas.md  08-glossary.md  09-mental-models.md  10-positioning-policy-engines.md  11-delegation-multi-agent.md  12-conformance-tck.md  13-who-is-this-for.md  14-eu-ai-act-mapping.md  15-benchmark-design.md  16-incremental-adoption.md  17-interception-mapping.md  18-obligation-checking-pattern.md  19-obligation-coverage-check.md  20-agentic-loop-assessment.md  21-why-not-just-tools.md  RFC-changeset-v0.1-to-v0.2.md  RFC-changeset-v0.2-to-v0.3.md  RFC-changeset-v0.3-to-v0.4.md  RFC-changeset-v0.4-to-v0.5.md  renaming.md
examples/: INVALID-open-on-irreversible.acp.yaml  INVALID-open-on-irreversible.stele.yaml  README.md  legal-matter.acp.yaml  legal-matter.stele.yaml  payments-ops.acp.yaml  payments-ops.stele.yaml  payments.registry.yaml  support-assistant.acp.yaml  support-assistant.stele.yaml  track-operator.acp.yaml  track-operator.stele.yaml  vehicle-controller.acp.yaml  vehicle-controller.stele.yaml  ward-nurse.acp.yaml  ward-nurse.registry.yaml  ward-nurse.stele.yaml
guide/: 01_hello_gateway.py  02_connect_an_agent.py  03_registered_functions.py  04_the_full_machine.py  05_obligation_matching.py  README.md  docker-compose.yml
registry/: acp-registry.yaml  stonefold-registry.yaml
schema/: acp.schema.json  registry.schema.json  sif.schema.json  stele.schema.json
tests/: acceptance-scenarios.md  conftest.py  test_ap_demo_app.py  test_ap_demo_core.py  test_ap_demo_pg_integration.py  test_ap_demo_scenarios.py  test_bench_harness.py  test_conformance_kit.py  test_cs020_digest.py  test_cs020_digest_pg_integration.py  test_cs021_identity.py  test_evidence_pack.py  test_evidence_pack_pg_integration.py  test_guide_examples.py  test_m0_pipeline_stub.py  test_m0_registry.py  test_m0_value_model.py  test_m1_authorization.py  test_m1_examples.py  (+40 more)
(+349 files in other folders)
