# ACP Gateway — project metadata and tooling.
#
# ACP-AMBIGUITY (docs/03 §Tech stack): the ADR pins Python 3.12, but the build
# environment only has CPython 3.11.3 available. All code here is written to be
# valid on 3.11+ (no PEP 695 `type` statements, no 3.12-only syntax) so it runs
# unchanged on the pinned 3.12. requires-python is set to ">=3.11" accordingly.
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stonefold-gateway"
version = "0.1.0"
description = "Agent Control Policy (ACP) Gateway — a deterministic enforcement point between an AI agent and the systems it can act on."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
gateway = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "types-PyYAML",
    "types-jsonschema",
    "testcontainers>=4.0",
]
# The Accounts-Payable demo (docs/05): the gateway stack + a real-LLM agent.
demo = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "websockets>=12",          # uvicorn needs this for the live-trace WebSocket
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "anthropic>=0.39",
    "openai>=1.40",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that require real Postgres/Redis via testcontainers (need Docker)",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["testcontainers.*", "jsonschema.*", "anthropic.*", "openai.*", "redis.*"]
ignore_missing_imports = true
# Treat the optional external SDKs as untyped whether or not they are installed, so the
# type-check is identical with the demo extra present (the benchmark's real-model runs)
# or absent (dev/CI). Their neutral-dict adapters (stonefold_ap_demo.llm) match at runtime.
follow_imports = "skip"
